--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "start": "node server.js",
   "scripts": {
     "dev": "node --watch server.js"
   },
@@ -10,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "type": "module",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "cors": "^2.8.5",
